Added additional surefire configuration